hphp/hack/test/typecheck/array/disallow_keyset_with_non_arraykey_keys.php
<?hh // strict

class C {}

function test(): void {
  $x = keyset[2.3, new C()];
}
